# qt-server-client

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  clientsocketadapter.cpp  clientsocketadapter.h  clientwidget.cpp  clientwidget.h  main.cpp
common/: common.cpp  common.h  container.h  isocketadapter.cpp  isocketadapter.h  logger.h  macros.h  package.cpp  package.h  socketadapter.cpp  socketadapter.h  threadpool.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h  serversocketadapter.cpp  serversocketadapter.h
